--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">DATN_MD02_ADMIM</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="status_filter">
+        <item>Tất cả</item>
+        <item>Đang hoạt động</item>
+        <item>Đã tắt</item>
+        <item>Đang diễn ra</item>
+        <item>Đã kết thúc</item>
+    </string-array>
+
 </resources>
